--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -15,6 +15,8 @@
 		flex-direction column
 		&--welcome
 			set-type-size('xx-large')
+			line-height 0
+
 		
 	&__dek
 		max-width $column-width
@@ -31,10 +33,10 @@
 		display block
 		max-width $column-width
 		margin 0 auto
-		margin-top 1rem
 		text-align center
-		set-type-size('medium')
+		set-type-size('root')
 		font-family $national
+		line-height 0
 
 	&__text 
 		max-width $column-width
