working on radio buttons

--- a/src/css/story/header.styl
+++ b/src/css/story/header.styl
@@ -14,11 +14,11 @@ header
 		margin 1rem auto
 
 		svg
-			fill $bg
+			fill $zooPink
 			display block
 			width 100%
 			path
-				fill $bg
+				fill $zooPink
 	
 header.is-sticky
 	position fixed
@@ -28,7 +28,6 @@ header.is-sticky
 	height 3rem
 	display flex
 	align-items center
-	
 	a.logo
 		margin 0 auto
 	
