--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -85,9 +85,9 @@ body
                     cursor pointer
                     margin 0
 
-                ul 
+                fieldset
                     
-                    li
+                    .wrapper
                         pointer-events all
                         set-type-size('root')
                         font-family $national-narrow
@@ -98,7 +98,7 @@ body
                         align-items center
                         // list-style-image url('assets/images/video.svg')
                         background-position top 10px
-                        &.selected
+                        &:checked
                             font-weight bold 
                         .video--icon
                             margin-left 0.5rem
