radio buttons working on mobile

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -63,7 +63,7 @@ body
       
             +mq('bp-5')
                 &:nth-child(even)
-                    margin-top -5em
+                    margin-top -3em
 
         .annotation--desktop
             display none
@@ -100,9 +100,11 @@ body
                         margin 0.5rem 0
                         input 
                             opacity 0
+                            
                         label 
                             display inline-block 
                             position relative
+                            cursor pointer
                             &::before 
                                 content ''
                                 position absolute 
