--- a/src/css/story/nav.styl
+++ b/src/css/story/nav.styl
@@ -40,22 +40,55 @@
                 margin-top 0.25rem
                 pointer-events all
 
-            ul 
-                display flex 
-                flex-direction row
-                margin 0
-                &.is-hidden 
-                    display none 
-                li
+            fieldset
+                .wrapper
                     pointer-events all
-                    set-type-size('small')
+                    set-type-size('root')
                     font-family $national-narrow
+                    font-weight normal
+                    cursor pointer
+                    line-height 1
                     display flex 
                     align-items center
-                    margin-right 0.5rem
-                    font-weight normal
-                    &.selected
-                        font-weight bold 
+                    // list-style-image url('assets/images/video.svg')
+                    background-position top 10px
+                    margin 0.5rem 0
+                    input 
+                        opacity 0
+                        
+                    label 
+                        display inline-block 
+                        position relative
+                        cursor pointer
+                        &::before 
+                            content ''
+                            position absolute 
+                            display inline-block 
+                            left -20px
+                            width 12px 
+                            height 12px
+                            border-radius 50%
+                            border 1px solid $white
+                            background $white
+                        &::after 
+                            content ''
+                            position absolute 
+                            display inline-block
+                            left -17px
+                            top 3px
+                            border-radius 50%
+                            width 8px 
+                            height 8px
+                            
+
+                    input:checked
+                        +label
+                            &::after
+                                background $primary
+                    input:focus 
+                        +label
+                            &::before 
+                                box-shadow 0 0px 8px $zooPink
                     .video--icon 
                         display none
                         margin-left 0.25rem
