label added to globe

--- a/src/css/story/globe.styl
+++ b/src/css/story/globe.styl
@@ -20,3 +20,7 @@
         display none
         +mq('bp-5')
             display block
+    text 
+        font-family $national-narrow
+        fill $fg
+        // text-transform uppercase
