--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -185,13 +185,17 @@ body
                 pointer-events auto
                 object-fit cover
                 align-self center
-                // filter saturate(0.25)
-                // transition filter, transform 300ms ease-in-out
+                filter saturate(0.25)
+                transform scale(1)
+                transform-origin 50% 100%
+                transition filter, transform 300ms ease-in-out
                 cursor pointer
 
-                // &.in-focus
-                //     filter saturate(1)
-                //     transition filter, transform 300ms ease-in-out
+                &.in-focus
+                    filter saturate(1)
+                    transform scale(1.25)
+                    transition filter, transform 300ms ease-in-out
+                    z-index 1000
 
 
         +mq('bp-5')
