--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -185,14 +185,14 @@ body
                 pointer-events auto
                 object-fit cover
                 align-self center
-                filter saturate(0.25)
+                // filter saturate(0.25)
                 transform scale(1)
                 transform-origin 50% 100%
                 transition filter, transform 300ms ease-in-out
                 cursor pointer
 
                 &.in-focus
-                    filter saturate(1)
+                    // filter saturate(1)
                     transform scale(1.25)
                     transition filter, transform 300ms ease-in-out
                     z-index 1000
