--- a/src/html/partials/story/intro.hbs
+++ b/src/html/partials/story/intro.hbs
@@ -1,13 +1,8 @@
 <div class='intro'>
 
 	<h1 class='intro__hed'>
-		<span class='intro__hed--welcome'>
-			{{doc.welcome}}
-		</span>
-		<span class='intro__hed--name'>
-			{{doc.title}}
-		</span>
-
+		<span class='intro__hed--welcome'>{{doc.welcome}}</span>
+		<span class='intro__hed--name'>{{doc.title}}</span>
 	</h1>
 	<time class='intro__time'>{{{doc.update}}}</time>
 
