minor updates and adjustments

--- a/src/html/partials/story/methods.hbs
+++ b/src/html/partials/story/methods.hbs
@@ -1,4 +1,4 @@
-<section class='methods'>
+<section class='methods' id='methods'>
     <div class='methods__contents'>
         <h3>Methods</h3>
         {{#each doc.methods}}
