--- a/src/html/partials/story/modal.hbs
+++ b/src/html/partials/story/modal.hbs
@@ -1,5 +1,5 @@
 <section class='modal is-hidden' data-js='modal'>
-    <div class='modal__quit'>
+    <div class='modal__quit' tabindex='0'>
         <img inline src='arrow-left.svg'>
         <p>Return to the zoo</p>
     </div>
