--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -197,7 +197,7 @@ body
                 margin 0 auto
                 max-width 1228px
                 pointer-events none
-                
+                min-height 100px
                 &-top
                     z-index 10
             .cam__display
