--- a/src/css/story/footer.styl
+++ b/src/css/story/footer.styl
@@ -74,25 +74,25 @@ footer.pudding-footer
 					padding-left 0.5rem
 					padding-top 0.1rem
 					line-height 1
-					color $gray
+					color $primary
 					+mq('bp-4')
 						set-type-size(large)
 
 				svg
-					fill $gray
+					fill $secondary
 					stroke none
 					vertical-align middle
 					circle, polyline, line
 						fill none
-						stroke $gray
+						stroke $secondary
 				.feather-mail path, .feather-lock path, .feather-rss path
-						stroke $gray
+						stroke $secondary
 						fill none
 
 		&__about
 			order 0
 			width 100%
-			color $gray
+			color $primary
 			display flex
 			flex-direction column
 			+mq('bp-5')
